--- a/index.html
+++ b/index.html
@@ -365,6 +365,86 @@
     font-family: 'SF Mono', 'Fira Code', monospace;
   }
 
+
+  /* ── SESSION SUMMARY ── */
+  .sess-timeline {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    position: relative;
+    padding-left: 20px;
+  }
+  .sess-timeline::before {
+    content: '';
+    position: absolute;
+    left: 7px;
+    top: 8px;
+    bottom: 8px;
+    width: 2px;
+    background: var(--border);
+  }
+  .sess-tl-item {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    padding: 10px 0;
+    position: relative;
+    cursor: pointer;
+    transition: background .15s;
+    padding-right: 10px;
+    border-radius: 6px;
+  }
+  .sess-tl-item:hover { background: rgba(255,255,255,.03); }
+  .sess-tl-dot {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: var(--blue);
+    border: 2px solid var(--bg);
+    flex-shrink: 0;
+    margin-left: -26px;
+    margin-top: 2px;
+    z-index: 1;
+  }
+  .sess-tl-dot.internal { background: var(--text-muted); }
+  .sess-tl-info { flex: 1; }
+  .sess-tl-info .tl-label {
+    font-size: 11px;
+    font-weight: 700;
+    color: var(--text);
+  }
+  .sess-tl-info .tl-detail {
+    font-size: 10px;
+    color: var(--text-muted);
+    margin-top: 2px;
+  }
+  .sess-tl-bar {
+    height: 6px;
+    border-radius: 3px;
+    margin-top: 6px;
+    background: var(--surface2);
+    overflow: hidden;
+  }
+  .sess-tl-bar-inner {
+    height: 100%;
+    border-radius: 3px;
+    transition: width .3s;
+  }
+  .sess-size-breakdown {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 12px;
+    margin-top: 12px;
+  }
+  .sess-size-cell {
+    text-align: center;
+    padding: 12px;
+    background: var(--surface2);
+    border-radius: 8px;
+  }
+  .sess-size-cell .val { font-size: 18px; font-weight: 700; }
+  .sess-size-cell .lbl { font-size: 10px; color: var(--text-muted); margin-top: 4px; }
+
   /* ── CARDS ── */
   .card {
     background: var(--surface);
@@ -1126,11 +1206,21 @@ sessions.forEach((sess, si) => {
     fileList.appendChild(el);
   });
 
-  // Toggle expand/collapse
+  // Session header click: show summary + toggle files
+  const sessIdx = si;
   header.addEventListener('click', () => {
     const arrow = header.querySelector('.arrow');
     const isOpen = fileList.classList.toggle('open');
     arrow.classList.toggle('open', isOpen);
+
+    // Show session summary in main view
+    document.querySelectorAll('.file-item').forEach(x => x.classList.remove('active'));
+    currentFile = null;
+    topbarFilename.textContent = 'Session ' + (sessIdx + 1);
+    document.getElementById('empty-state').style.display = 'none';
+    document.getElementById('dump-view').style.display = 'block';
+    renderSessionSummary(sess, sessIdx);
+    if (compareMode) toggleCompare();
   });
 
   group.appendChild(header);
@@ -1156,6 +1246,139 @@ try {
     }
   }
 } catch(e) {}
+
+
+// ── SESSION SUMMARY ──
+function renderSessionSummary(sess, sessionIndex) {
+  const view = document.getElementById('dump-view');
+  const mainFiles = sess.files.filter(f => !DUMPS[f].data.model.includes('haiku'));
+  const intFiles = sess.files.filter(f => DUMPS[f].data.model.includes('haiku'));
+  const maxMsgs = Math.max(...sess.files.map(f => (DUMPS[f].data.messages||[]).length));
+  const turns = Math.ceil(maxMsgs / 2);
+  const totalSize = sess.files.reduce((s,f) => s + DUMPS[f].size, 0);
+  const maxFileSize = Math.max(...sess.files.map(f => DUMPS[f].size));
+
+  // Calculate cumulative sizes
+  const firstEntry = DUMPS[sess.files[0]];
+  const firstSz = calcSizes(firstEntry.data);
+  const lastMainFile = mainFiles[mainFiles.length - 1];
+  const lastEntry = DUMPS[lastMainFile];
+  const lastSz = calcSizes(lastEntry.data);
+
+  // Size growth: system+tools are constant, messages grow
+  const sysToolsSize = firstSz.sysSize + firstSz.toolSize;
+  const firstMsgSize = firstSz.msgSize;
+  const lastMsgSize = lastSz.msgSize;
+
+  const firstSize = firstEntry.size;
+  const sessTag = sizeTag(firstSize, firstEntry.data.model);
+
+  const promptShort = sess.prompt.length > 120 ? sess.prompt.slice(0, 120) + '...' : sess.prompt;
+
+  // Timeline items
+  const timelineHtml = sess.files.map((fname, fi) => {
+    const entry = DUMPS[fname];
+    const d = entry.data;
+    const model = d.model || '?';
+    const isHaiku = model.includes('haiku');
+    const msgCount = (d.messages||[]).length;
+    const sz = calcSizes(d);
+    const turnLabel = isHaiku ? 'INTERNAL' : 'Turn ' + Math.ceil(msgCount/2);
+    const pct = Math.round(entry.size / maxFileSize * 100);
+
+    const sysColor = '#4a9eff';
+    const toolColor = '#ffd166';
+    const msgColor = '#4aff9e';
+    const sysPct = Math.round(sz.sysSize / (sz.total||1) * 100);
+    const toolPct = Math.round(sz.toolSize / (sz.total||1) * 100);
+
+    const ts = fname.match(/T(\d{2})(\d{2})(\d{2})/);
+    const timeStr = ts ? ts[1]+':'+ts[2]+':'+ts[3] : '';
+
+    return \`
+      <div class="sess-tl-item" data-file="\${fname}" title="Click to view details">
+        <div class="sess-tl-dot \${isHaiku ? 'internal' : ''}"></div>
+        <div class="sess-tl-info">
+          <div class="tl-label">
+            \${turnLabel}
+            <span style="font-weight:400;color:var(--text-muted);margin-left:6px;">\${timeStr}</span>
+            \${isHaiku ? '<span class="tag tag-internal" style="margin-left:4px;">haiku</span>' : ''}
+          </div>
+          <div class="tl-detail">
+            \${fmtBytes(entry.size)} &bull; \${msgCount} msgs
+            \${!isHaiku ? '&bull; sys:'+fmtBytes(sz.sysSize)+' tools:'+fmtBytes(sz.toolSize)+' msgs:'+fmtBytes(sz.msgSize) : '&bull; no tools'}
+          </div>
+          <div class="sess-tl-bar">
+            <div class="sess-tl-bar-inner" style="width:\${pct}%;background:linear-gradient(90deg, \${sysColor} 0%, \${sysColor} \${sysPct}%, \${toolColor} \${sysPct}%, \${toolColor} \${sysPct+toolPct}%, \${msgColor} \${sysPct+toolPct}%, \${msgColor} 100%);"></div>
+          </div>
+        </div>
+      </div>
+    \`;
+  }).join('');
+
+  // Repeated data calc
+  const repeatedSysTools = sysToolsSize * (mainFiles.length - 1);
+
+  view.innerHTML = \`
+    <div class="card">
+      <div class="card-title">Session \${sessionIndex + 1} \${sessTag}</div>
+      <div style="margin-top:8px;font-size:13px;color:var(--text);line-height:1.5;">\${escHtml(promptShort)}</div>
+      <div class="sess-size-breakdown" style="margin-top:16px;">
+        <div class="sess-size-cell">
+          <div class="val blue">\${sess.files.length}</div>
+          <div class="lbl">Requests (\${mainFiles.length} main + \${intFiles.length} internal)</div>
+        </div>
+        <div class="sess-size-cell">
+          <div class="val green">\${turns}</div>
+          <div class="lbl">Turns</div>
+        </div>
+        <div class="sess-size-cell">
+          <div class="val" style="color:var(--purple);">\${fmtBytes(totalSize)}</div>
+          <div class="lbl">Total Data Sent</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-title">Size Breakdown</div>
+      <div class="sess-size-breakdown">
+        <div class="sess-size-cell">
+          <div class="val" style="color:#4a9eff;">\${fmtBytes(firstSz.sysSize)}</div>
+          <div class="lbl">System (per request)</div>
+        </div>
+        <div class="sess-size-cell">
+          <div class="val" style="color:#ffd166;">\${fmtBytes(firstSz.toolSize)}</div>
+          <div class="lbl">Tools (per request)</div>
+        </div>
+        <div class="sess-size-cell">
+          <div class="val" style="color:#4aff9e;">\${fmtBytes(firstMsgSize)} &rarr; \${fmtBytes(lastMsgSize)}</div>
+          <div class="lbl">Messages (first &rarr; last)</div>
+        </div>
+      </div>
+      \${mainFiles.length > 1 ? \`
+      <div class="finding" style="margin-top:12px;">
+        <b>Repeated overhead:</b> System + Tools (\${fmtBytes(sysToolsSize)}) sent \${mainFiles.length} times = <b>\${fmtBytes(sysToolsSize * mainFiles.length)}</b> total.
+        Only messages grow between turns.
+      </div>\` : ''}
+    </div>
+
+    <div class="card">
+      <div class="card-title">Request Timeline</div>
+      <div class="sess-timeline">\${timelineHtml}</div>
+    </div>
+  \`;
+
+  // Wire timeline item clicks
+  view.querySelectorAll('.sess-tl-item[data-file]').forEach(item => {
+    item.addEventListener('click', () => {
+      const fname = item.dataset.file;
+      document.querySelectorAll('.file-item').forEach(x => x.classList.remove('active'));
+      const fileEl = sidebarList.querySelector(\`.file-item[data-file="\${fname}"]\`);
+      if (fileEl) fileEl.classList.add('active');
+      loadFile(fname);
+    });
+  });
+}
 
 // ── LOAD FILE ──
 function loadFile(fname) {
