--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
   :root {
-    --bg: #1a1b2e;
-    --surface: #252640;
-    --surface2: #2d2f55;
-    --border: #3a3c5c;
-    --text: #e2e4f0;
-    --text-muted: #8890b0;
-    --blue: #4a9eff;
-    --green: #4aff9e;
-    --red: #ff4a6a;
-    --yellow: #ffd166;
-    --purple: #c77dff;
+    --bg: #f5f0e8;
+    --surface: #ffffff;
+    --surface2: #f0ebe3;
+    --border: #e0dbd2;
+    --text: #1a1a1a;
+    --text-muted: #8b8680;
+    --blue: #2b6cb0;
+    --green: #2f855a;
+    --red: #c53030;
+    --yellow: #b7791f;
+    --accent: #d97706;
+    --accent-light: rgba(217,119,6,.08);
+    --accent-mid: rgba(217,119,6,.15);
     --radius: 8px;
     --sidebar-w: 300px;
   }
@@ -57,12 +59,12 @@
     letter-spacing: .3px;
   }
 
-  #sidebar-header h1:hover { color: var(--purple); }
+  #sidebar-header h1:hover { color: var(--accent); }
 
   .lang-btn.active {
-    border-color: var(--purple);
-    color: var(--purple);
-    background: rgba(199,125,255,.1);
+    border-color: var(--accent);
+    color: var(--accent);
+    background: var(--accent-light);
   }
 
   #sidebar-header .sub {
@@ -86,8 +88,8 @@
 
   .file-item:hover { background: var(--surface2); }
   .file-item.active {
-    background: rgba(74,158,255,.08);
-    border-left-color: var(--blue);
+    background: var(--accent-light);
+    border-left-color: var(--accent);
   }
 
   .file-item .fname {
@@ -120,14 +122,14 @@
     letter-spacing: .5px;
   }
 
-  .tag-normal { background: rgba(255,74,106,.2); color: var(--red); }
-  .tag-clean  { background: rgba(74,158,255,.2); color: var(--blue); }
-  .tag-internal { background: rgba(136,144,176,.15); color: var(--text-muted); }
-  .tag-fallback { background: rgba(255,165,0,.2); color: #ffa500; font-size: 9px; }
+  .tag-normal { background: rgba(197,48,48,.1); color: var(--red); }
+  .tag-clean  { background: rgba(43,108,176,.12); color: var(--blue); }
+  .tag-internal { background: rgba(139,134,128,.1); color: var(--text-muted); }
+  .tag-fallback { background: rgba(217,119,6,.12); color: var(--accent); font-size: 9px; }
 
   .tag-model {
-    background: rgba(199,125,255,.15);
-    color: var(--purple);
+    background: var(--accent-mid);
+    color: var(--accent);
     font-size: 10px;
     font-weight: 600;
     padding: 2px 6px;
@@ -147,18 +149,18 @@
     padding: 8px 14px;
     cursor: pointer;
     background: var(--surface2);
-    border-left: 3px solid var(--purple);
+    border-left: 3px solid var(--accent);
     display: flex;
     flex-direction: column;
     gap: 3px;
     transition: background .15s;
     user-select: none;
   }
-  .session-header:hover { background: rgba(199,125,255,.1); }
+  .session-header:hover { background: var(--accent-light); }
   .session-header .session-label {
     font-size: 10px;
     font-weight: 700;
-    color: var(--purple);
+    color: var(--accent);
     text-transform: uppercase;
     letter-spacing: .5px;
     display: flex;
@@ -194,13 +196,13 @@
   }
   .session-files .file-item {
     padding-left: 24px;
-    border-left: 3px solid rgba(199,125,255,.15);
+    border-left: 3px solid var(--accent-mid);
   }
   .session-files .file-item .turn-badge {
     font-size: 9px;
     font-weight: 700;
     color: var(--text-muted);
-    background: rgba(255,255,255,.06);
+    background: rgba(0,0,0,.04);
     padding: 1px 5px;
     border-radius: 3px;
     margin-right: 4px;
@@ -246,7 +248,7 @@
     white-space: nowrap;
   }
   .btn:hover { background: var(--border); }
-  .btn.active { border-color: var(--blue); color: var(--blue); background: rgba(74,158,255,.1); }
+  .btn.active { border-color: var(--accent); color: var(--accent); background: var(--accent-light); }
 
   #content {
     flex: 1;
@@ -282,7 +284,7 @@
   #empty-state .landing-section h3 {
     font-size: 13px;
     font-weight: 700;
-    color: var(--purple);
+    color: var(--accent);
     text-transform: uppercase;
     letter-spacing: .5px;
     margin: 0 0 12px 0;
@@ -333,7 +335,7 @@
   #empty-state .stat-card .val {
     font-size: 22px;
     font-weight: 700;
-    color: var(--blue);
+    color: var(--accent);
   }
 
   #empty-state .stat-card .lbl {
@@ -346,8 +348,8 @@
 
   #empty-state .finding {
     padding: 10px 14px;
-    background: rgba(74,158,255,.06);
-    border-left: 3px solid var(--blue);
+    background: rgba(217,119,6,.05);
+    border-left: 3px solid var(--accent);
     border-radius: 0 6px 6px 0;
     margin-bottom: 8px;
     font-size: 12px;
@@ -355,10 +357,10 @@
     line-height: 1.5;
   }
 
-  #empty-state .finding b { color: var(--blue); }
+  #empty-state .finding b { color: var(--accent); }
 
   #empty-state code {
-    background: rgba(255,255,255,.06);
+    background: rgba(0,0,0,.04);
     padding: 1px 5px;
     border-radius: 3px;
     font-size: 12px;
@@ -394,12 +396,12 @@
     padding-right: 10px;
     border-radius: 6px;
   }
-  .sess-tl-item:hover { background: rgba(255,255,255,.03); }
+  .sess-tl-item:hover { background: rgba(0,0,0,.02); }
   .sess-tl-dot {
     width: 12px;
     height: 12px;
     border-radius: 50%;
-    background: var(--blue);
+    background: var(--accent);
     border: 2px solid var(--bg);
     flex-shrink: 0;
     margin-left: -26px;
@@ -650,7 +652,7 @@
   }
   .modal-overlay.active { display: flex; }
   .modal {
-    background: #252640;
+    background: var(--surface);
     border: 1px solid var(--border);
     border-radius: 12px;
     width: 700px;
@@ -706,7 +708,7 @@
     font-weight: 600;
   }
 
-  .badge-schema { background: rgba(74,255,158,.12); color: var(--green); }
+  .badge-schema { background: rgba(47,133,90,.1); color: var(--green); }
   .badge-size   { background: rgba(74,158,255,.12); color: var(--blue); }
 
   /* ── MESSAGES ── */
@@ -735,8 +737,8 @@
   }
 
   .msg-bubble.tool-result .bubble-inner {
-    background: rgba(199,125,255,.1);
-    border: 1px solid rgba(199,125,255,.25);
+    background: var(--accent-light);
+    border: 1px solid rgba(217,119,6,.2);
     border-radius: 12px 12px 12px 4px;
   }
 
@@ -757,7 +759,7 @@
     letter-spacing: .3px;
   }
   .msg-api-info code {
-    background: rgba(255,255,255,.06);
+    background: rgba(0,0,0,.04);
     padding: 1px 4px;
     border-radius: 3px;
     font-size: 9px;
@@ -773,14 +775,14 @@
   }
 
   .msg-bubble.user .bubble-inner {
-    background: rgba(74,158,255,.15);
-    border: 1px solid rgba(74,158,255,.3);
+    background: rgba(43,108,176,.1);
+    border: 1px solid rgba(43,108,176,.2);
     border-radius: 12px 12px 4px 12px;
   }
 
   .msg-bubble.assistant .bubble-inner {
-    background: rgba(74,255,158,.1);
-    border: 1px solid rgba(74,255,158,.25);
+    background: rgba(47,133,90,.08);
+    border: 1px solid rgba(47,133,90,.15);
     border-radius: 12px 12px 12px 4px;
   }
 
@@ -801,11 +803,11 @@
     display: inline-block;
   }
 
-  .block-type-text       { background: rgba(74,158,255,.2);  color: var(--blue); }
-  .block-type-tool_use   { background: rgba(255,209,102,.2);  color: var(--yellow); }
-  .block-type-tool_result{ background: rgba(199,125,255,.2);  color: var(--purple); }
+  .block-type-text       { background: rgba(43,108,176,.12);  color: var(--blue); }
+  .block-type-tool_use   { background: rgba(183,121,31,.12);  color: var(--yellow); }
+  .block-type-tool_result{ background: var(--accent-mid);  color: var(--accent); }
   .block-type-thinking   { background: rgba(255,74,106,.15);  color: var(--red); }
-  .block-type-other      { background: rgba(136,144,176,.15); color: var(--text-muted); }
+  .block-type-other      { background: rgba(139,134,128,.1); color: var(--text-muted); }
 
   .block-content {
     font-family: 'SF Mono', monospace;
@@ -911,7 +913,7 @@
   ::-webkit-scrollbar { width: 6px; height: 6px; }
   ::-webkit-scrollbar-track { background: transparent; }
   ::-webkit-scrollbar-thumb { background: var(--border); border-radius: 3px; }
-  ::-webkit-scrollbar-thumb:hover { background: #5a5c7c; }
+  ::-webkit-scrollbar-thumb:hover { background: #a9a39a; }
 </style>
 </head>
 <body>
@@ -1290,7 +1292,7 @@ function renderSessionSummary(sess, sessionIndex) {
     const detailStr = !isHaiku
       ? fmtBytes(entry.size)+' \u2022 '+msgCount+' msgs \u2022 sys:'+fmtBytes(sz.sysSize)+' tools:'+fmtBytes(sz.toolSize)+' msgs:'+fmtBytes(sz.msgSize)
       : fmtBytes(entry.size)+' \u2022 '+msgCount+' msgs \u2022 no tools';
-    const barBg = 'linear-gradient(90deg, #4a9eff 0%, #4a9eff '+sysPct+'%, #ffd166 '+sysPct+'%, #ffd166 '+(sysPct+toolPct)+'%, #4aff9e '+(sysPct+toolPct)+'%, #4aff9e 100%)';
+    const barBg = 'linear-gradient(90deg, #2b6cb0 0%, #2b6cb0 '+sysPct+'%, #d97706 '+sysPct+'%, #d97706 '+(sysPct+toolPct)+'%, #2f855a '+(sysPct+toolPct)+'%, #2f855a 100%)';
 
     return '<div class="sess-tl-item" data-file="'+fname+'" title="Click to view details">'
       + '<div class="sess-tl-dot '+(isHaiku?'internal':'')+'"></div>'
@@ -1312,15 +1314,15 @@ function renderSessionSummary(sess, sessionIndex) {
     + '<div class="sess-size-breakdown" style="margin-top:16px;">'
     + '<div class="sess-size-cell"><div class="val blue">'+sess.files.length+'</div><div class="lbl">Requests ('+mainFiles.length+' main + '+intFiles.length+' internal)</div></div>'
     + '<div class="sess-size-cell"><div class="val green">'+turns+'</div><div class="lbl">Turns</div></div>'
-    + '<div class="sess-size-cell"><div class="val" style="color:var(--purple);">'+fmtBytes(totalSize)+'</div><div class="lbl">Total Data Sent</div></div>'
+    + '<div class="sess-size-cell"><div class="val" style="color:var(--accent);">'+fmtBytes(totalSize)+'</div><div class="lbl">Total Data Sent</div></div>'
     + '</div></div>'
 
     + '<div class="card">'
     + '<div class="card-title">Size Breakdown</div>'
     + '<div class="sess-size-breakdown">'
-    + '<div class="sess-size-cell"><div class="val" style="color:#4a9eff;">'+fmtBytes(firstSz.sysSize)+'</div><div class="lbl">System (per request)</div></div>'
-    + '<div class="sess-size-cell"><div class="val" style="color:#ffd166;">'+fmtBytes(firstSz.toolSize)+'</div><div class="lbl">Tools (per request)</div></div>'
-    + '<div class="sess-size-cell"><div class="val" style="color:#4aff9e;">'+fmtBytes(firstMsgSize)+' &rarr; '+fmtBytes(lastMsgSize)+'</div><div class="lbl">Messages (first &rarr; last)</div></div>'
+    + '<div class="sess-size-cell"><div class="val" style="color:var(--blue);">'+fmtBytes(firstSz.sysSize)+'</div><div class="lbl">System (per request)</div></div>'
+    + '<div class="sess-size-cell"><div class="val" style="color:var(--accent);">'+fmtBytes(firstSz.toolSize)+'</div><div class="lbl">Tools (per request)</div></div>'
+    + '<div class="sess-size-cell"><div class="val" style="color:var(--green);">'+fmtBytes(firstMsgSize)+' &rarr; '+fmtBytes(lastMsgSize)+'</div><div class="lbl">Messages (first &rarr; last)</div></div>'
     + '</div>'
     + repeatedHtml
     + '</div>'
@@ -1367,9 +1369,9 @@ function renderDump(fname, entry) {
 
   // conic-gradient: system=blue, tools=yellow, messages=green
   const pie = `conic-gradient(
-    #4a9eff 0% ${sysPct}%,
-    #ffd166 ${sysPct}% ${sysPct+toolPct}%,
-    #4aff9e ${sysPct+toolPct}% 100%
+    #2b6cb0 0% ${sysPct}%,
+    #d97706 ${sysPct}% ${sysPct+toolPct}%,
+    #2f855a ${sysPct+toolPct}% 100%
   )`;
 
   view.innerHTML = `
@@ -1407,17 +1409,17 @@ function renderDump(fname, entry) {
           <div class="pie" style="background: ${pie};"></div>
           <div class="pie-legend">
             <div class="legend-item">
-              <div class="legend-dot" style="background:#4a9eff;"></div>
+              <div class="legend-dot" style="background:#2b6cb0;"></div>
               <span>System</span>
               <span class="legend-pct">${sysPct}% &bull; ${fmtBytes(sz.sysSize)}</span>
             </div>
             <div class="legend-item">
-              <div class="legend-dot" style="background:#ffd166;"></div>
+              <div class="legend-dot" style="background:#d97706;"></div>
               <span>Tools</span>
               <span class="legend-pct">${toolPct}% &bull; ${fmtBytes(sz.toolSize)}</span>
             </div>
             <div class="legend-item">
-              <div class="legend-dot" style="background:#4aff9e;"></div>
+              <div class="legend-dot" style="background:#2f855a;"></div>
               <span>Messages</span>
               <span class="legend-pct">${msgPct}% &bull; ${fmtBytes(sz.msgSize)}</span>
             </div>
