Soften surface color to blend with warm background

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
   :root {
     --bg: #f7f5f0;
-    --surface: #ffffff;
-    --surface2: #f2efea;
-    --border: #e5e1db;
+    --surface: #faf8f5;
+    --surface2: #f4f1ec;
+    --border: #eae6e0;
     --text: #2d2b28;
     --text-muted: #9b9590;
     --blue: #4a7fb5;
