Improve message text readability on light theme
- Fix block-content text color from dark-theme hardcoded to soft gray
- Increase bubble background/border opacity for better contrast
- Boost msg-api-info and msg-explain opacity

--- a/index.html
+++ b/index.html
@@ -737,8 +737,8 @@
   }
 
   .msg-bubble.tool-result .bubble-inner {
-    background: var(--accent-light);
-    border: 1px solid rgba(191,106,66,.15);
+    background: rgba(191,106,66,.10);
+    border: 1px solid rgba(191,106,66,.20);
     border-radius: 12px 12px 12px 4px;
   }
 
@@ -753,7 +753,7 @@
   .msg-api-info {
     font-size: 9px;
     color: var(--text-muted);
-    opacity: .65;
+    opacity: .8;
     margin-bottom: 6px;
     font-family: 'SF Mono', 'Fira Code', monospace;
     letter-spacing: .3px;
@@ -768,21 +768,21 @@
   .msg-explain {
     font-size: 9px;
     color: var(--text-muted);
-    opacity: .55;
+    opacity: .7;
     margin-top: 4px;
     font-style: italic;
     line-height: 1.4;
   }
 
   .msg-bubble.user .bubble-inner {
-    background: rgba(74,127,181,.08);
-    border: 1px solid rgba(74,127,181,.15);
+    background: rgba(74,127,181,.12);
+    border: 1px solid rgba(74,127,181,.22);
     border-radius: 12px 12px 4px 12px;
   }
 
   .msg-bubble.assistant .bubble-inner {
-    background: rgba(90,154,114,.06);
-    border: 1px solid rgba(90,154,114,.12);
+    background: rgba(90,154,114,.10);
+    border: 1px solid rgba(90,154,114,.18);
     border-radius: 12px 12px 12px 4px;
   }
 
@@ -813,7 +813,7 @@
     font-family: 'SF Mono', monospace;
     font-size: 11px;
     line-height: 1.5;
-    color: #c9d0e8;
+    color: #5f5b57;
     white-space: pre-wrap;
     word-break: break-word;
   }
